# magic2

./: pyproject.toml
